@@ -402,10 +402,12 @@ table.budget.act_trans td.date				{padding-right:0; width:110px;}
 .wrap_result .header_doc					{display:none;}
 .wrap_result_text							{padding:5px 0 20px 0;}
 .result_main_title							{font-size:16px; line-height:20px;}
+.result_main_title .narrative:nth-of-type(n+2){color:#ccc; font-style:italic;}
 .result_title								{font-size:15px; line-height:18px;}
-.result_main_title:first-letter,
-.result_indi_desc:first-letter,
-.result_title:first-letter					{text-transform:capitalize;}
+.result_title .narrative:nth-of-type(n+2)	{padding-bottom:10px; color:#ccc; font-style:italic;}
+.result_main_title .narrative:first-letter,
+.result_indi_desc .narrative:first-letter,
+.result_title .narrative:first-letter		{text-transform:capitalize;}
 .wrap_result_text .wrap_document,
 .wrap_result_indicator .wrap_document		{margin:15px 0 0 0;}
 .wrap_result a.doc_link						{font-size:7px; line-height:1em; padding:5px;}
@@ -425,6 +427,7 @@ table.budget.act_trans td.date				{padding-right:0; width:110px;}
 .wrap_result_indi_ref:last-of-type			{padding:0;}
 .result_indi_head							{border-bottom:1px solid #4d5264; color:#ccc; font-size:10px; padding-bottom:3px;}
 .result_indi_desc							{color:#ddd; font-size:14px; line-height:18px; padding-top:5px;}
+.result_indi_desc .narrative:nth-of-type(n+2){color:#ccc; padding-top:15px;}
 .result_indi_ref							{border-bottom:1px dotted #666; font-size:11px; line-height:11px; padding:5px 0 0 0;}
 .result_indi_ref div						{padding-bottom:3px;}
 .result_indi_ref:last-of-type				{border:0; padding-bottom:0;}
@@ -895,8 +898,11 @@ body.print		{background-color:#fff;}
 .print .wrap_length,
 .print .legend,
 .print .wrap_result .sector_list_wrap,
-.print .wrap_description .text .narrative:nth-of-type(n+2)
+.print .wrap_description .text .narrative,
 .print .wrap_result_type .wrap_result_text .result_indi_desc,
+.print .result_main_title .narrative,
+.print .result_indi_desc .narrative,
+.print .result_title .narrative,
 .print .result_indi_head,
 .print .result_facet,
 .print .result_facet_name,
