@@ -2,6 +2,10 @@ Development Portal (2022-03-22 shi)
 ==============================
 Update Freetext glossary in search
 Update view_search glossary chunk now in general
+Display all narratives for result titles & indicator descriptions
+Fix result comments to only show when available
+Fix result percent dot background color when @percent is 0
+Update print-friendly theme for SAVi
 
 
 Development Portal (2022-03-10 shi)
